; ModuleID = '/home/carl/AnghaBench/linux/drivers/mtd/spi-nor/extr_spi-nor.c_spi_nor_post_bfpt_fixups.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mtd/spi-nor/extr_spi-nor.c_spi_nor_post_bfpt_fixups.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spi_nor = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { {}* }
%struct.sfdp_parameter_header = type { i32 }
%struct.sfdp_bfpt = type { i32 }
%struct.spi_nor_flash_parameter = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.spi_nor*, %struct.sfdp_parameter_header*, %struct.sfdp_bfpt*, %struct.spi_nor_flash_parameter*)* @spi_nor_post_bfpt_fixups to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @spi_nor_post_bfpt_fixups(%struct.spi_nor* %0, %struct.sfdp_parameter_header* %1, %struct.sfdp_bfpt* %2, %struct.spi_nor_flash_parameter* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.spi_nor*, align 8
  %7 = alloca %struct.sfdp_parameter_header*, align 8
  %8 = alloca %struct.sfdp_bfpt*, align 8
  %9 = alloca %struct.spi_nor_flash_parameter*, align 8
  store %struct.spi_nor* %0, %struct.spi_nor** %6, align 8
  store %struct.sfdp_parameter_header* %1, %struct.sfdp_parameter_header** %7, align 8
  store %struct.sfdp_bfpt* %2, %struct.sfdp_bfpt** %8, align 8
  store %struct.spi_nor_flash_parameter* %3, %struct.spi_nor_flash_parameter** %9, align 8
  %10 = load %struct.spi_nor*, %struct.spi_nor** %6, align 8
  %11 = getelementptr inbounds %struct.spi_nor, %struct.spi_nor* %10, i32 0, i32 0
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %13, align 8
  %15 = icmp ne %struct.TYPE_3__* %14, null
  br i1 %15, label %16, label %40

16:                                               ; preds = %4
  %17 = load %struct.spi_nor*, %struct.spi_nor** %6, align 8
  %18 = getelementptr inbounds %struct.spi_nor, %struct.spi_nor* %17, i32 0, i32 0
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  %23 = bitcast {}** %22 to i32 (%struct.spi_nor*, %struct.sfdp_parameter_header*, %struct.sfdp_bfpt*, %struct.spi_nor_flash_parameter*)**
  %24 = load i32 (%struct.spi_nor*, %struct.sfdp_parameter_header*, %struct.sfdp_bfpt*, %struct.spi_nor_flash_parameter*)*, i32 (%struct.spi_nor*, %struct.sfdp_parameter_header*, %struct.sfdp_bfpt*, %struct.spi_nor_flash_parameter*)** %23, align 8
  %25 = icmp ne i32 (%struct.spi_nor*, %struct.sfdp_parameter_header*, %struct.sfdp_bfpt*, %struct.spi_nor_flash_parameter*)* %24, null
  br i1 %25, label %26, label %40

26:                                               ; preds = %16
  %27 = load %struct.spi_nor*, %struct.spi_nor** %6, align 8
  %28 = getelementptr inbounds %struct.spi_nor, %struct.spi_nor* %27, i32 0, i32 0
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 0
  %31 = load %struct.TYPE_3__*, %struct.TYPE_3__** %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i32 0, i32 0
  %33 = bitcast {}** %32 to i32 (%struct.spi_nor*, %struct.sfdp_parameter_header*, %struct.sfdp_bfpt*, %struct.spi_nor_flash_parameter*)**
  %34 = load i32 (%struct.spi_nor*, %struct.sfdp_parameter_header*, %struct.sfdp_bfpt*, %struct.spi_nor_flash_parameter*)*, i32 (%struct.spi_nor*, %struct.sfdp_parameter_header*, %struct.sfdp_bfpt*, %struct.spi_nor_flash_parameter*)** %33, align 8
  %35 = load %struct.spi_nor*, %struct.spi_nor** %6, align 8
  %36 = load %struct.sfdp_parameter_header*, %struct.sfdp_parameter_header** %7, align 8
  %37 = load %struct.sfdp_bfpt*, %struct.sfdp_bfpt** %8, align 8
  %38 = load %struct.spi_nor_flash_parameter*, %struct.spi_nor_flash_parameter** %9, align 8
  %39 = call i32 %34(%struct.spi_nor* %35, %struct.sfdp_parameter_header* %36, %struct.sfdp_bfpt* %37, %struct.spi_nor_flash_parameter* %38)
  store i32 %39, i32* %5, align 4
  br label %41

40:                                               ; preds = %16, %4
  store i32 0, i32* %5, align 4
  br label %41

41:                                               ; preds = %40, %26
  %42 = load i32, i32* %5, align 4
  ret i32 %42
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
